<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/nav_menu_calendar" />
        <item
            android:id="@+id/nav_tracker"
            android:title="@string/nav_menu_tracker" />
        <item
            android:id="@+id/nav_dream_book"
            android:title="@string/nav_menu_dream_book" />
        <item
            android:id="@+id/nav_results"
            android:title="@string/nav_menu_results" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/nav_menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_menu_settings" />
    </group>

</menu>
